plugins {
    id 'java-library'           // Java 라이브러리 플러그인
    id 'maven-publish'          // Maven 배포 플러그인
}

group = 'net.deanly'
version = '0.0.1'
description = 'Solana RPC Methods for java'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
}

dependencies {
    api 'org.bouncycastle:bcprov-jdk15to18:1.79'
    api 'com.squareup.okhttp3:okhttp:4.12.0'
    api 'com.squareup.moshi:moshi:1.15.2'
    api 'com.squareup.moshi:moshi-adapters:1.15.2'
    api 'org.java-websocket:Java-WebSocket:1.6.0'
    api 'org.projectlombok:lombok:1.18.36'

    implementation project(":struct-layout")
//    implementation 'net.deanly:struct-layout:0.1.1'

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    testCompileOnly 'org.projectlombok:lombok:1.18.36'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'

    // 테스트 의존성
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
    testImplementation 'org.slf4j:slf4j-api:2.0.16'
    testRuntimeOnly 'ch.qos.logback:logback-classic:1.4.12'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.javassist:javassist:3.30.2-GA'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.test {
    useJUnitPlatform()
    jvmArgs += [
            "--add-opens", "java.base/java.lang=ALL-UNNAMED"
    ]
}